--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "http-server": "^14.0.0"
+  }
 }
